apply plugin: 'java-library'

group 'de.kaleidox'
version '0.3.1-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

task wrapper(type: Wrapper) {
  gradleVersion = '4.10.2'
  distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
}

task sourcesJar(type: Jar) {
    from sourceSets.main.allJava
    classifier = "sources"
}

task javadocJar(type: Jar) {
    javadoc
    from javadoc.destinationDir
    classifier = "javadoc"
}

compileJava {
    options.encoding = 'UTF-8'
}

repositories {
    jcenter()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
    implementation 'com.vdurmont:emoji-java:4.0.0'
    compileOnly 'com.intellij:annotations:12.0'
    
    testImplementation 'junit:junit:4.12'
}

sourceSets {
    main {
        java {
            srcDirs = ["src\\main\\java"]
        }
    }
}

if (!isTravis()) {
    apply from: 'gradle/publishing.gradle'
}

// utility method to decide whether we are on a travis ci machine
static boolean isTravis() {
    return System.getenv().containsKey("TRAVIS")
}